refactor(ImageProcessor): Java 16의 `toList()` 메서드 사용으로 코드 간소화
- `extractImagePaths` 메서드에서 `Collectors.toList()` 대신 `toList()` 메서드를 사용하여 코드 간소화